--- a/index.html
+++ b/index.html
@@ -173,27 +173,27 @@
   <div id="shawarma" class="items">
   <div class="grid">
     <div class="item-card">
-      <img src="images/beef-shawarma.jpg" alt="Beef Shawarma">
+      <a href="Order.html"><img src="images/beef-shawarma.jpg" alt="Beef Shawarma"></a>
       <p>Beef Shawarma</p>
     </div>
 
     <div class="item-card">
-      <img src="images/chicken-shawarma.jpg" alt="Chicken Shawarma">
+      <a href="Order.html"><img src="images/chicken-shawarma.jpg" alt="Chicken Shawarma"></a>
       <p>Chicken Shawarma</p>
     </div>
 
     <div class="item-card">
-      <img src="images/mix-shawarma.jpg" alt="Mix Shawarma">
+      <a href="Order.html"><img src="images/mix-shawarma.jpg" alt="Mix Shawarma"></a>
       <p>Mix Shawarma</p>
     </div>
 
     <div class="item-card">
-      <img src="images/full-protein-shawarma.jpg" alt="Full Protein">
+      <a href="Order.html"><img src="images/full-protein-shawarma.jpg" alt="Full Protein"></a>
       <p>Full Protein</p>
     </div>
 
     <div class="item-card">
-      <img src="images/jumbo-shawarma.jpg" alt="Jumbo Shawarma">
+      <a href="Order.html"><img src="images/jumbo-shawarma.jpg" alt="Jumbo Shawarma"></a>
       <p>Jumbo Shawarma</p>
     </div>
   </div>
@@ -203,27 +203,27 @@
    <div id="grills" class="items">
   <div class="grid">
     <div class="item-card">
-      <img src="images/grilled-snails.jpg" alt="Grilled Snails">
+      <a href="Order.html"><img src="images/grilled-snails.jpg" alt="Grilled Snails"></a>
       <p>Grilled Snails</p>
     </div>
 
     <div class="item-card">
-      <img src="images/snails-fries.jpg" alt="Snails & Fries">
+      <a href="Order.html"><img src="images/snails-fries.jpg" alt="Snails & Fries"></a>
       <p>Snails & Fries</p>
     </div>
 
     <div class="item-card">
-      <img src="images/Asun-fries.jpg" alt="Loaded Asun">
+      <a href="Order.html"><img src="images/Asun-fries.jpg" alt="Loaded Asun"></a>
       <p>Loaded Asun</p>
     </div>
 
     <div class="item-card">
-      <img src="images/asun.jpg" alt="Asun">
+      <a href="Order.html"><img src="images/asun.jpg" alt="Asun"></a>
       <p>Asun</p>
     </div>
 
     <div class="item-card">
-      <img src="images/grilled-pwrans.jpg" alt="Grilled Shrimp">
+      <a href="Order.html"><img src="images/grilled-pwrans.jpg" alt="Grilled Shrimp"></a>
       <p>Grilled Shrimp</p>
     </div>
   </div>
@@ -233,22 +233,22 @@
  <div id="combos" class="items">
   <div class="grid">
     <div class="item-card">
-      <img src="images/chicken-fries.jpg" alt="Chicken & Fries">
+      <a href="Order.html"><img src="images/chicken-fries.jpg" alt="Chicken & Fries"></a>
       <p>Chicken & Fries</p>
     </div>
 
     <div class="item-card">
-      <img src="images/turkey-fries.jpg" alt="Turkey & Fries">
+      <a href="Order.html"><img src="images/turkey-fries.jpg" alt="Turkey & Fries"></a>
       <p>Turkey & Fries</p>
     </div>
 
     <div class="item-card">
-      <img src="images/loaded-beef-fries.jpg" alt="Loaded Beef">
+      <a href="Order.html"><img src="images/loaded-beef-fries.jpg" alt="Loaded Beef"></a>
       <p>Loaded Beef & Fries</p>
     </div>
 
     <div class="item-card">
-      <img src="images/egg-sauce-fries.jpg" alt="Egg Sauce">
+      <a href="Order.html"><img src="images/egg-sauce-fries.jpg" alt="Egg Sauce"></a>
       <p>Egg Sauce & Fries</p>
     </div>
   </div>
@@ -258,22 +258,22 @@
 <div id="fish" class="items">
   <div class="grid">
     <div class="item-card">
-      <img src="images/grilled-catfish.jpg" alt="Catfish">
+      <a href="Order.html"><img src="images/grilled-catfish.jpg" alt="Catfish"></a>
       <p>Grilled Catfish</p>
     </div>
 
     <div class="item-card">
-      <img src="images/Chicken Skewers.jpg" alt="Chicken Skewers">
+      <a href="Order.html"><img src="images/Chicken Skewers.jpg" alt="Chicken Skewers"></a>
       <p>Chicken Skewers</p>
     </div>
 
     <div class="item-card">
-      <img src="images/grilled-croaker.jpg" alt="Croaker">
+      <a href="Order.html"><img src="images/grilled-croaker.jpg" alt="Croaker"></a>
       <p>Grilled Croaker</p>
     </div>
 
     <div class="item-card">
-      <img src="images/grilled-tilapia.jpg" alt="Tilapia">
+      <a href="Order.html"><img src="images/grilled-tilapia.jpg" alt="Tilapia"></a>
       <p>Grilled Tilapia</p>
     </div>
   </div>
@@ -283,22 +283,22 @@
  <div id="loadedfries" class="items">
   <div class="grid">
     <div class="item-card">
-      <img src="images/mini-loaded-fries.jpg" alt="Mini Loaded Fries">
+      <a href="Order.html"><img src="images/mini-loaded-fries.jpg" alt="Mini Loaded Fries"></a>
       <p>Mini Loaded Fries</p>
     </div>
 
     <div class="item-card">
-      <img src="images/mix-mini-loaded-fries.jpg" alt="Mix Mini">
+      <a href="Order.html"><img src="images/mix-mini-loaded-fries.jpg" alt="Mix Mini"></a>
       <p>Mix Mini Loaded</p>
     </div>
 
     <div class="item-card">
-      <img src="images/supreme-loaded-fries.jpg" alt="Supreme">
+      <a href="Order.html"><img src="images/supreme-loaded-fries.jpg" alt="Supreme"></a>
       <p>Supreme Loaded</p>
     </div>
 
     <div class="item-card">
-      <img src="images/mix-supreme-loaded-fries.jpg" alt="Mix Supreme">
+      <a href="Order.html"><img src="images/mix-supreme-loaded-fries.jpg" alt="Mix Supreme"></a>
       <p>Mix Supreme</p>
     </div>
   </div>
