--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Restaurant Order via WhatsApp</title>
+  <title>Homagrills.com</title>
+  <link rel="icon" type="image/x-icon" href="/images/homalogo.jpg">
   <link rel="stylesheet" href="styling.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -23,16 +24,16 @@
   <!-- Navigation Links -->
   <nav class="mobile-nav" id="mobileNav">
   <button class="close-menu" id="closeMenu">&times;</button>
-  <a href="#">Home</a>
-  <a href="#">Services</a>
+  <a href="index.html" class="active">Home</a>
+  <a href="services.html">Our Services</a>
   <a href="#">About Us</a>
   <a href="#">Contact</a>
   <a href="Order.html" class="order-mobile"><i class="fa fa-shopping-cart"> Order</i></a>
 </nav>
 
  <nav class="nav-links">
-  <a href="#">Home</a>
-  <a href="#">Services</a>
+  <a href="index.html">Home</a>
+  <a href="services.html">Our Services</a>
   <a href="#">About Us</a>
   <a href="#">Contact</a>
 </nav>
