--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Navigation Links -->
   <nav class="mobile-nav" id="mobileNav">
   <button class="close-menu" id="closeMenu">&times;</button>
-  <a href="index.html" class="active">Home</a>
+  <a href="index.html"  class="page">Home</a>
   <a href="services.html">Our Services</a>
   <a href="#">About Us</a>
   <a href="#">Contact</a>
@@ -32,7 +32,7 @@
 </nav>
 
  <nav class="nav-links">
-  <a href="index.html">Home</a>
+  <a href="index.html"  class="page">Home</a>
   <a href="services.html">Our Services</a>
   <a href="#">About Us</a>
   <a href="#">Contact</a>
@@ -135,7 +135,7 @@
 
 
 <section class="categories">
-  <h2>Choose a Category</h2>
+  <h2 style="color: orangered;">Choose a Category</h2>
 
   <!-- CATEGORY ROW -->
   <div class="category-row">
