--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
   <div class="services-grid">
     <div class="service-card">
       <img src="images/events.jpg" alt="Events Service">
-      <h3>Events</h3>
+      <h3>Outdoor Events</h3>
       <p>Weddings, parties, and corporate events.</p>
       <button onclick="bookService('Events')">Book Now</button>
     </div>
@@ -67,15 +67,15 @@
 
     <div class="service-card">
       <img src="images/outdoors.jpg" alt="Outdoor Service">
-      <h3>Outdoors</h3>
-      <p>Outdoor setups and assistance.</p>
+      <h3>Outdoor Parties</h3>
+      <p>Outdoor party hangout/clubbing.</p>
       <button onclick="bookService('Outdoors')">Book Now</button>
     </div>
 
     <div class="service-card">
       <img src="images/home-services.jpg" alt="Home Services">
       <h3>Home Services</h3>
-      <p>Cleaning, repairs, and home support.</p>
+      <p>Grilling done at the comfort of your home.</p>
       <button onclick="bookService('Home Services')">Book Now</button>
     </div>
   </div>
