--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
       <img src="images/delivery.jpg" alt="Delivery Service">
       <h3>Deliveries</h3>
       <p>Fast and reliable delivery services.</p>
-      <button onclick="bookService('Deliveries')">Book Now</button>
+      <button onclick="redirectToOrder()">Book Now</button>
     </div>
 
     <div class="service-card">
@@ -126,14 +126,14 @@
       <h3>Follow Us</h3>
       <div class="social-links">
         <a href="https://www.facebook.com/profile.php?id=100083109267401" target="_blank" class="social-icon facebook">
-          <i class="fa-brands fa-facebook"></i>
+          <i class="fa fa-facebook"></i>
         </a>
 
         <a href="https://www.instagram.com/homagrills" target="_blank" class="social-icon instagram">
-          <i class="fa-brands fa-instagram"></i>
+          <i class="fa fa-instagram"></i>
         </a>
         <a href="https://wa.me/2347035107709" target="_blank" class="social-icon whatsapp">
-          <i class="fa-brands fa-whatsapp"></i>
+          <i class="fa fa-whatsapp"></i>
         </a>
       </div>
     </div>
@@ -153,6 +153,11 @@
     const url = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
     window.open(url, "_blank");
   }
+function redirectToOrder() {
+    // Redirect to Order.html
+    window.location.href = "Order.html";
+  }
+  
 </script>
 
 
